Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113574

Incorrect sizing and bad text rendering with WebEngine using fractional scaling on Wayland

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.0 Beta2, 6.9.0 FF
    • 6.5.0
    • WebEngine
    • None
    • Fedora 38, GNOME 44.1, Wayland, Qt 6.5.0
      Fedora 38, KDE Plasma 5.27.4, Wayland, Qt 6.5.0
    • Linux/Wayland
    • 21a9add47 (dev), 05136d3d6 (6.8)

      After Anki updated to Qt 6.5.0, Text rendered inside a webview looked worse and some content was too small unless the window was resized. This problem can be reproduced outside of Anki.

      The sizing issue doesn't always occur; using the attached test script, I noticed that it only appeared if the webview was resized to a height of at least 596 px (on my 1080p display).

      Since Qt 6.5.0 added support for the fractional_scale_v1 wayland extension, I guess that this problem might be caused by an incomplete implementation on the WebEngine side, although I have no deeper insight into this.

      Original report: https://github.com/ankitects/anki/issues/1767#issuecomment-1535050698

      Steps to reproduce:

      •  Use the latest version of GNOME or KDE and enable fractional scaling
        • (only GNOME): 
          gsettings set org.gnome.mutter experimental-features "['scale-monitor-framebuffer']"
          
        • set your screen to 125% scaling in GNOME Settings/KDE System Settings
      • run the attached script to render a web page
        python3 -m venv venv
        ./venv/bin/pip install pyside6
        ./venv/bin/python qt_webengine_fractional_scaling.py
        

      If you need more information, I will be happy to provide it. 

        1. 100% Scaling on GNOME.png
          110 kB
          David C.
        2. 100% Scaling on KDE Plasma.png
          129 kB
          David C.
        3. 125% Scaling on GNOME.png
          278 kB
          David C.
        4. 125% Scaling on GNOME after resize.png
          430 kB
          David C.
        5. 125% Scaling on KDE Plasma.png
          174 kB
          David C.
        6. 125% Scaling on KDE Plasma after resize.png
          261 kB
          David C.
        7. qt_webengine_fractional_scaling.py
          0.3 kB
          David C.
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            d-k-bo David C.
            Votes:
            10 Vote for this issue
            Watchers:
            25 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes